# polyu-fyp

./: .gitignore  AGENTS.md  README.md  findings.md  progress.md  task_plan.md
backend/: .replit  main.py  pyproject.toml  readme.md
backend/RAG_python-quiz/: .coveragerc  .env.example  .gitignore  create_test_users.py  main.py  pytest.ini  requirements.txt  test.py  test_api.py  test_openAI.py  testbanana.py
backend/RAG_python-quiz/app/: config.py
backend/RAG_python-quiz/evaluation/: __init__.py  gemini_100_question.json  gemini_50_question_en.json  gemini_50_question_zh.json  generate_charts.py  list_documents.py  ragas_config.py  retrieval_compare.py  run_comparison.py  test.json  test_queries_template2 copy 2.json  test_queries_template2 copy.json  test_queries_template2.json
backend/RAG_python-quiz/evaluation_exam/: chatgpt5thinking.json  gemini3pro.json  question.json  run_benchmark.py
backend/RAG_python-quiz/migrations/: 000_init_database.sql  add_auth_refresh_tokens.sql  add_chunk_media.sql  add_chunks_embedding_v2.sql  add_grading_source.sql  create_exam_tables.sql  enable_rls_policies.sql  scope_document_hash_by_class.sql
backend/RAG_python-quiz/scripts/: backfill_embedding_v2.py  migrate_neon_to_local.ps1
backend/RAG_python-quiz/tests/: __init__.py  pg_service_test_support.py  support.py  test_adaptive_rag_service.py  test_adaptive_retrieval_resilience.py  test_adaptive_retrieval_service.py  test_ai_service.py  test_ai_service_structured_json_fallback.py  test_api_key_manager.py  test_api_key_manager_more.py  test_aqg.py  test_auth_api.py  test_citation_evidence_service.py  test_classes_api.py  test_dev_credentials.py  test_document_service.py  test_embedding_backfill_service.py  test_embedding_client.py  test_embedding_migration_sql.py  test_exam_api.py  test_exam_retriever.py  test_files_pg_api.py  test_generator_regression.py  test_generator_unit.py  test_graph.py  test_ingest_errors.py  test_jwt_utils.py  test_main_app.py  test_no_committed_secrets.py  (+31 more)
(+447 files in other folders)
