[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi==0.114.1",
    "google-genai>=1.0.0",
    "gunicorn>=21.2.0",
    "langchain>=0.2.16",
    "langchain-core>=0.2.38",
    "langchain-experimental>=0.0.64",
    "langchain-google-genai>=1.0.7",
    "langchain-openai>=0.1.25",
    "langchain-text-splitters>=0.2.2",
    "langgraph>=0.2.0",
    "markdownify>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy<2.0.0",
    "openai>=1.0.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "reportlab>=4.0.0",
    "requests==2.32.3",
    "rich>=13.0.0",
    "uvicorn[standard]==0.30.6",
]
