[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "fastapi==0.114.1",
    "google-genai==1.68.0",
    "gunicorn==25.1.0",
    "langchain==0.3.28",
    "langchain-core==0.3.83",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.12",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "langgraph==1.0.1",
    "llama-index-core==0.14.21",
    "markdownify==1.2.2",
    "matplotlib==3.10.8",
    "numpy==2.1.3",
    "openai==2.29.0",
    "passlib[bcrypt]==1.7.4",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.13.3",
    "pydantic-settings==2.5.2",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "ragas==0.4.0",
    "reportlab==4.4.10",
    "requests==2.32.3",
    "rich==14.3.3",
    "uvicorn[standard]==0.30.6",
]
